<resources>
    <string name="app_name">Lango</string>
    <string name="date">Date:</string>
    <string name="original_text">Original Text:</string>
    <string name="translated_text">Translated Text:</string>
    <string name="location">Location:</string>
    <string name="note">Note:</string>
    <string name="share">Share</string>
    <string name="edit">Edit</string>
    <string name="title_home">Home</string>
    <string name="title_preferences">Preferences</string>
    <string name="title_previous_translations">Previous Translations</string>
    <string name="title_view_translation">View Translations</string>
    <string name="title_save_translation">Save Translation</string>
    <string name="title_edit_translation">Edit Translation</string>
    <string name="nav_previous_translations">Previous</string>
    <string name="date_desc">Date ▼</string>
    <string name="date_asc">Date ▲</string>
    <string name="original_text_no_colon">Original Text</string>
    <string name="save">Save</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="go_back_confirmation">Are you sure you want to go back?</string>
    <string name="camera">Camera</string>
    <string name="permissions_granted">Permissions Granted</string>
    <string name="permissions_denied">Permissions Denied</string>
    <string name="dialog_confirm">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="on_photo_success">Photo successfully taken!</string>
    <string name="map_permission_dialog">Please enable location services or else you won\'t be able to save the location of your images.</string>
    <string name="recognising_text">Recognising Text</string>
    <string name="translating_text">Translating Text</string>
    <string name="text_recognition_fail">Text Recognition Failed</string>
    <string name="text_translation_fail">Text Translation Failed</string>
    <string name="no_text_found">No Text Found</string>
    <string name="file_error">Error occurred while creating the file.</string>
    <string name="no_image">No Image Provided</string>
    <string name="translation_not_found">Translation Not Found</string>
    <string name="error">An Error Has Occurred</string>
    <string name="errorOccurred">An error has occurred</string>
    <string name="returnWithoutSaving">Return without saving</string>
    <string name="delete">Delete</string>
    <string name="back_not_allowed">Back Not Allowed</string>
    <string name="delete_confirmation">Are you sure you want to delete this translation?</string>
    <string name="location_not_found">The entered location could not be found, would you like to reset it?</string>
    <string name="invalid_entries">Some Entries are Invalid</string>
    <string name="share_message">Wow! I just translated this image using Lango!\nOriginal Text: %1$s\nTranslation: %2$s\nDate: %3$s \n</string>
    <!-- Preferences -->

    <string name="notifications_header">Notifications</string>
    <string name="notifications_title">Enable Range Notifications</string>

    <string name="theme_header">Themes</string>
    <string name="theme_title">Select a theme</string>
    <string name="check_camera_settings">Please check your device\'s camera settings</string>
    <string name="NOTIFICATION_CHANNEL_ID">locationCheckServiceChannel</string>
    <string name="foreground_notif_msg">Searching for nearby translations</string>
    <string name="service_title">Location Service</string>
    <string name="notification_title">Nearby translations</string>
    <string name="notification_content">You are currently in the area of words you have previously translated</string>
    <string name="translation_bundle_key">translationKey</string>
    <string name="service_channel_name">Location Check Service Channel</string>

</resources>