<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewTranslationFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonLayout"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/dateLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Placeholder" />
        </LinearLayout>

        <TextView
            android:id="@+id/originalTextLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/original_text" />

        <androidx.cardview.widget.CardView
            android:id="@+id/originalTextCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="150dp">

            <TextView
                android:id="@+id/originalText"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/translatedTextLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/translated_text" />

        <androidx.cardview.widget.CardView
            android:id="@+id/translatedTextCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="150dp">

            <TextView
                android:id="@+id/translatedText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/locationLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location" />

        <TextView
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/noteLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/note" />

        <TextView
            android:id="@+id/note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="75dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/shareButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:text="@string/share" />

        <Button
            android:id="@+id/editButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:text="@string/edit" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>