<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StoredTranslationsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/dateButton"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textOff="@string/date_desc"
            android:textOn="@string/date_asc"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/originalTextLabel"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center_vertical"
            android:text="@string/original_text_no_colon"
            android:textAllCaps="true"
            android:textColor="?attr/colorPrimary"
            android:textSize="18sp" />

    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/colorPrimary" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/previousTranslationsViewer"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>