<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <!--Used for navigating using the bottom navigation bar-->
    <fragment
        android:id="@+id/navigation_home"
        android:name="nz.ac.uclive.oam23.tbc.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_preferences"
        android:name="nz.ac.uclive.oam23.tbc.PreferencesFragment"
        android:label="@string/title_preferences"
        tools:layout="@layout/fragment_preferences" />

    <fragment
        android:id="@+id/navigation_previous"
        android:name="nz.ac.uclive.oam23.tbc.PreviousTranslationsFragment"
        android:label="@string/title_previous_translations"
        tools:layout="@layout/fragment_previous_translations" >
        <action
            android:id="@+id/action_navigation_previous_to_navigation_viewTranslation"
            app:destination="@id/navigation_viewTranslation" />
    </fragment>
    <fragment
        android:id="@+id/navigation_saveEdit"
        android:name="nz.ac.uclive.oam23.tbc.SaveEditTranslationFragment"
        android:label="fragment_save_edit_translation"
        tools:layout="@layout/fragment_save_edit_translation" />
    <fragment
        android:id="@+id/navigation_viewTranslation"
        android:name="nz.ac.uclive.oam23.tbc.ViewTranslationFragment"
        android:label="fragment_view_translation"
        tools:layout="@layout/fragment_view_translation" >
        <action
            android:id="@+id/action_navigation_viewTranslation_to_navigation_saveEdit"
            app:destination="@id/navigation_saveEdit" />
    </fragment>
</navigation>